--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -153,7 +153,7 @@ pipeline:
                                       paths:
                                         - deploy/k8s/base/values.yaml
                                       repoName: harness-test-app
-                                      branch: main
+                                      branch: <+stage.variables.manifest_branch>
                         timeout: 10m
                         failureStrategies: []
                     - step:
