--- a/.harness/dev.yaml
+++ b/.harness/dev.yaml
@@ -23,9 +23,11 @@ inputSet:
                       - identifier: "http-echo"
                         type: "DockerRegistry"
                         spec:
-                          tag: "<+input>"
+                          tag: "0.0.3"
           environment:
             environmentRef: "cdtooling2eksv2"
+            infrastructureDefinitions:
+            - identifier: "harnessdev"
         variables:
         - name: "manifest_branch"
           type: "String"
