--- a/.harness/dev.yaml
+++ b/.harness/dev.yaml
@@ -23,7 +23,7 @@ inputSet:
                       - identifier: "http-echo"
                         type: "DockerRegistry"
                         spec:
-                          tag: "0.0.3"
+                          tag: "<+trigger.artifact.build>"
           environment:
             environmentRef: "cdtooling2eksv2"
             infrastructureDefinitions:
