--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -169,20 +169,6 @@ pipeline:
                           skipDryRun: false
                         failureStrategies: []
                     - step:
-                        type: ShellScript
-                        name: sleep
-                        identifier: sleep
-                        spec:
-                          shell: Bash
-                          onDelegate: true
-                          source:
-                            type: Inline
-                            spec:
-                              script: sleep 60
-                          environmentVariables: []
-                          outputVariables: []
-                        timeout: 10m
-                    - step:
                         type: Verify
                         name: Verify via New Relic
                         identifier: Verify_via_New_Relic
@@ -218,7 +204,7 @@ pipeline:
                                     action:
                                       type: Ignore
                         when:
-                          stageStatus: Failure
+                          stageStatus: Success
                     - step:
                         name: Canary Delete
                         identifier: canaryDelete
