--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -23,12 +23,17 @@ pipeline:
                     source:
                       type: Inline
                       spec:
-                        script: ENV_NAME=$(echo "<+serviceConfig.artifacts.primary.tag>" | sed 's/\(.*\)-.*$/\1/')
+                        script: |-
+                          BUILD_TAG="<+serviceConfig.artifacts.primary.tag>"
+                          ENV_NAME=$(echo "${BUILD_TAG}" | sed 's/\(.*\)-.*$/\1/')
                     environmentVariables: []
                     outputVariables:
                       - name: ENV_NAME
                         type: String
                         value: ENV_NAME
+                      - name: BUILD_TAG
+                        type: String
+                        value: BUILD_TAG
                   timeout: 10m
               - step:
                   name: Approve to Start Deployment
