--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -26,6 +26,8 @@ pipeline:
                         script: |-
                           BUILD_TAG="<+serviceConfig.artifacts.primary.tag>"
                           ENV_NAME=$(echo "${BUILD_TAG}" | sed 's/\(.*\)-.*$/\1/')
+                          echo $BUILD_TAG
+                          echo $ENV_NAME
                     environmentVariables: []
                     outputVariables:
                       - name: ENV_NAME
