--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -287,3 +287,7 @@ pipeline:
             type: String
             description: Branch of app repo to use for terraform configuration
             value: <+input>
+          - name: artifact_tag
+            type: String
+            description: ""
+            value: <+input>
