--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -180,7 +180,7 @@ pipeline:
                                       paths:
                                         - deploy/k8s/base/values.yaml
                                       repoName: harness-test-app
-                                      branch: <+execution.steps.Get_Environment_from_Image.output.outputVariables.ENV_NAME>
+                                      branch: main
                         timeout: 10m
                         failureStrategies: []
                     - step:
