Update pipeline zztest-canary-deployment

--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -277,13 +277,16 @@ pipeline:
             value: hello-world
           - name: manifest_branch
             type: String
+            default: <+execution.steps.Get_Environment_from_Image.output.outputVariables.ENV_NAME>
             description: Branch of app repo to use for k8s manifests
             value: <+input>
           - name: tfvars_branch
             type: String
+            default: <+execution.steps.Get_Environment_from_Image.output.outputVariables.ENV_NAME>
             description: "Branch of app repo to use for terraform variables files "
             value: <+input>
           - name: tfconfig_branch
             type: String
+            default: <+execution.steps.Get_Environment_from_Image.output.outputVariables.ENV_NAME>
             description: Branch of app repo to use for terraform configuration
             value: <+input>
