--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -61,8 +61,9 @@ pipeline:
         variables:
           - name: image_tag
             type: String
+            default: <+trigger.artifact.build>
             description: ""
-            value: <+trigger.artifact.build>
+            value: <+input>
     - stage:
         name: Canary Deploy
         identifier: Canary_Deploy
