--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -25,7 +25,7 @@ pipeline:
                       spec:
                         script: |-
                           BUILD_TAG="<+stage.variables.image_tag>"
-                          ENV_NAME=$(echo "${BUILD_TAG}" | sed 's/\(.*\)-.*$/\1/')
+                          ENV_NAME=$(echo "${BUILD_TAG}" | sed 's/\(.*\)-.*-deploy$/\1/')
                           echo $BUILD_TAG
                           echo $ENV_NAME
                     environmentVariables: []
