Update inputset New Image

--- a/.harness/New_Image.yaml
+++ b/.harness/New_Image.yaml
@@ -1,6 +1,7 @@
 inputSet:
   identifier: "New_Image"
   name: "New Image"
+  tags: {}
   orgIdentifier: "default"
   projectIdentifier: "tiger"
   pipeline:
