--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -125,7 +125,7 @@ pipeline:
                                   connectorRef: mfjhellman
                                   repoName: harness-test-app
                                   folderPath: deploy/terraform
-                                  branch: <+stage.variables.tfconfig_branch>
+                                  branch: <+execution.steps.Get_Environment_from_Image.output.outputVariables.ENV_NAME>
                             secretManagerRef: harnessSecretManager
                             varFiles:
                               - varFile:
@@ -137,7 +137,7 @@ pipeline:
                                       spec:
                                         gitFetchType: Branch
                                         repoName: harness-test-app
-                                        branch: <+stage.variables.tfvars_branch>
+                                        branch: <+execution.steps.Get_Environment_from_Image.output.outputVariables.ENV_NAME>
                                         paths:
                                           - deploy/terraform/vars/<+infra.name>.tfvars
                                         connectorRef: mfjhellman
@@ -186,7 +186,7 @@ pipeline:
                                       paths:
                                         - deploy/k8s/base/values.yaml
                                       repoName: harness-test-app
-                                      branch: main
+                                      branch: <+execution.steps.Get_Environment_from_Image.output.outputVariables.ENV_NAME>
                         timeout: 10m
                         failureStrategies: []
                     - step:
