Update inputset New Image

--- a/.harness/New_Image.yaml
+++ b/.harness/New_Image.yaml
@@ -30,4 +30,8 @@ inputSet:
                       - identifier: "http-echo"
                         type: "DockerRegistry"
                         spec:
-                          tag: "<+trigger.artifact.build>"
+                          tag: "<+input>"
+    variables:
+    - name: "teardown"
+      type: "String"
+      value: "false"
