--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -270,6 +270,20 @@ pipeline:
                     stageStatus: Success
                     condition: <+pipeline.variables.teardown> == "false"
                   failureStrategies: []
+              - step:
+                  type: Http
+                  name: Check App URL
+                  identifier: Check_App_URL
+                  spec:
+                    method: GET
+                    headers: []
+                    outputVariables: []
+                    url: https://<+stage.variables.name>-<+infra.namespace>.dev.eiger.io/
+                  timeout: 10s
+                  when:
+                    stageStatus: Success
+                    condition: <+pipeline.variables.teardown> == "false"
+                  failureStrategies: []
               - stepGroup:
                   name: Teardown
                   identifier: Teardown
