--- a/.harness/zztestcanarydeployment.yaml
+++ b/.harness/zztestcanarydeployment.yaml
@@ -219,7 +219,7 @@ pipeline:
                           spec:
                             sensitivity: HIGH
                             duration: 5m
-                            deploymentTag: <+serviceConfig.artifacts.primary.tag>
+                            deploymentTag: <+trigger.artifact.build>
                         timeout: 2h
                         failureStrategies:
                           - onFailure:
